--- a/submissions.html
+++ b/submissions.html
@@ -60,6 +60,33 @@
         </div>
     </div>
 
+    <div id="footer" class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12 col-lg-6">
+                <h2>UKCI</h2>
+            </div>
+            <div class="col-sm-12 col-lg-6">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./submissions.html">Submissions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./programme.html">Programme</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./venue.html">Venue</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
