Added all of Janes comments from Knowledge Sharing Meeting

--- a/programme.html
+++ b/programme.html
@@ -18,13 +18,14 @@
                   <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="./index.html">
-                            <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University">
+                            <p id="ukcilogo">UKCI / 
+                            <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University"> </p>
                         </a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="navbar-toggler-icon"></i>
                       </button>
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
                                 <a class="nav-link" href="./about.html">About</a>
                             </li>
@@ -44,12 +45,26 @@
                       </div>
                     </div>
                   </nav>
+                  <div id="subnavbar" class="container-fluid text-center">
+                    <div class="row align-items-start justify-content-center">
+                        <div class="subnavlink col-lg-4 col-sm-12">
+                            UKCI Conference 2024
+                        </div>
+                        <div class="subnavlink col-lg-4 col-sm-12">
+                            6th - 8th September
+                        </div>
+                        <div class="subnavlink col-lg-4 col-sm-12">
+                            @Ulster University, Belfast
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
     <div id="bodyContent" class="container-fluid">
         <h2>Programme</h2>
+        <br>
         <div class="row">
             <div class="col">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis consequuntur possimus fuga doloremque.</p>
@@ -63,7 +78,12 @@
     <div id="footer" class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-lg-6">
-                <h2>UKCI</h2>
+                <a class="navbar-brand" href="./index.html">
+                    <h2 id="footerukcilogo">UKCI</h2>
+                </a>
+                <a class="navbar-brand" href="./index.html">
+                    <img id="footeruulogo" src="./images/UUWhite.png" alt="Ulster University">
+                </a>
             </div>
             <div class="col-sm-12 col-lg-6">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
