--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
+    <!-- Additional JQuery If required -->
+    <!-- <script src="https://code.jquery.com/jquery-3.7.0.js"></script> -->
 </head>
 
 <body>
@@ -18,13 +20,14 @@
                   <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="./index.html">
-                            <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University">
+                            <p id="ukcilogo">UKCI / 
+                            <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University"> </p>
                         </a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="navbar-toggler-icon"></i>
                       </button>
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
                                 <a class="nav-link" href="./about.html">About</a>
                             </li>
@@ -54,7 +57,8 @@
     </div>
 
     <div id="bodyContent" class="container-fluid">
-        <h2>UKCI</h2>
+        <h2 id="test">UKCI</h2>
+        <br>
         <div class="row">
             <div class="col-sm-12 col-lg-6">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis consequuntur possimus fuga doloremque.</p>
@@ -68,7 +72,13 @@
     <div id="footer" class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-lg-6">
-                <h2>UKCI</h2>
+                <a class="navbar-brand" href="./index.html">
+                    <h2>UKCI</h2>
+                </a>
+                <br>
+                <a class="navbar-brand" href="./index.html">
+                    <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University">
+                </a>
             </div>
             <div class="col-sm-12 col-lg-6">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
