--- a/submissions.html
+++ b/submissions.html
@@ -15,47 +15,70 @@
     <div id="bodyBanner" class="container-fluid">
         <div class="row">
             <div class="col">
-                  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
+                <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="./index.html">
-                            <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University">
+                            <p id="ukcilogo">UKCI /
+                                <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University">
+                            </p>
                         </a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="navbar-toggler-icon"></i>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" href="./about.html">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./submissions.html">Submissions</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./programme.html">Programme</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./venue.html">Venue</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./contact.html">Contact</a>
-                            </li>
-                        </ul>
-                      </div>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <i class="navbar-toggler-icon"></i>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ms-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./about.html">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./submissions.html">Submissions</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./programme.html">Programme</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./venue.html">Venue</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./contact.html">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                  </nav>
+                </nav>
+                <div id="subnavbar" class="container-fluid text-center">
+                    <div class="row align-items-start justify-content-center">
+                        <div class="subnavlink col-lg-4 col-sm-12">
+                            UKCI Conference 2024
+                        </div>
+                        <div class="subnavlink col-lg-4 col-sm-12">
+                            6th - 8th September
+                        </div>
+                        <div class="subnavlink col-lg-4 col-sm-12">
+                            @Ulster University, Belfast
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
     </div>
 
     <div id="bodyContent" class="container-fluid">
         <h2>Submissions</h2>
+        <br>
         <div class="row">
             <div class="col">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis consequuntur possimus fuga doloremque.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla
+                    officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis
+                    consequuntur possimus fuga doloremque.</p>
             </div>
             <div class="col">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis consequuntur possimus fuga doloremque.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla
+                    officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis
+                    consequuntur possimus fuga doloremque.</p>
             </div>
         </div>
     </div>
@@ -63,7 +86,12 @@
     <div id="footer" class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-lg-6">
-                <h2>UKCI</h2>
+                <a class="navbar-brand" href="./index.html">
+                    <h2 id="footerukcilogo">UKCI</h2>
+                </a>
+                <a class="navbar-brand" href="./index.html">
+                    <img id="footeruulogo" src="./images/UUWhite.png" alt="Ulster University">
+                </a>
             </div>
             <div class="col-sm-12 col-lg-6">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -91,7 +119,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    
+
     <script src="./script.js"></script>
 </body>
 
