--- a/index.html
+++ b/index.html
@@ -17,36 +17,39 @@
     <div id="bodyBanner" class="container-fluid">
         <div class="row">
             <div class="col">
-                  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
+                <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="./index.html">
-                            <p id="ukcilogo">UKCI / 
-                            <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University"> </p>
+                            <p id="ukcilogo">UKCI /
+                                <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University">
+                            </p>
                         </a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="navbar-toggler-icon"></i>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="./about.html">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./submissions.html">Submissions</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./programme.html">Programme</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./venue.html">Venue</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./contact.html">Contact</a>
-                            </li>
-                        </ul>
-                      </div>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <i class="navbar-toggler-icon"></i>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ms-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./about.html">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./submissions.html">Submissions</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./programme.html">Programme</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./venue.html">Venue</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./contact.html">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                  </nav>
+                </nav>
             </div>
         </div>
         <div id="ukcibanner" class="row">
@@ -57,14 +60,113 @@
     </div>
 
     <div id="bodyContent" class="container-fluid">
-        <h2 id="test">UKCI</h2>
+        <h2 id="keyinfotitle">Key Information</h2>
+        <hr>
+        <br>
+        <div class="row keyinfobody">
+            <div class="col-sm-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h6 class="keydate"><strong>UKCI:</strong> 4th - 6th September 2024</h6>
+                        <h6 class="keydate"><strong>Registration Opens:</strong> 20th May 2024</h6>
+                        <h6 class="keydate"><strong>Early Bird Registration Open Until:</strong> 22nd July 2024</h6>
+                        <!-- <h6 class="keydate"><strong>Regular Registration: </strong>£375 | <strong>Early Bird Registration: </strong>£325</h6>
+                        <h6 class="keydate"><strong>Student Registration: </strong>£275 | <strong>Early Bird Student Registration: </strong>£225</h6> -->
+                        <h6 class="keydate"><strong>Paper Submission Deadline:</strong> 9th June 2024</h6>
+                        <h6 class="keydate"><strong>Acceptance Notification:</strong> 14th July 2024</h6>
+                        <h6 class="keydate"><strong>Camera Ready Submission Deadline:</strong> 4th August 2024</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <h2 id="keyinfotitle">Registration Fees</h2>
+        <hr>
+        <br>
+        <div class="row keyinfobody">
+            <div class="col-sm-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h6 class="keydate"><strong>Regular Registration: </strong>£375 | <strong>Early Bird Registration: </strong>£325</h6>
+                        <h6 class="keydate"><strong>Student Registration: </strong>£275 | <strong>Early Bird Student Registration: </strong>£225</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <h2 id="callforpapertitle">Call for Papers</h2>
+        <hr>
         <br>
         <div class="row">
             <div class="col-sm-12 col-lg-6">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis consequuntur possimus fuga doloremque.</p>
+                <div class="card">
+                    <div class="card-body">
+                        <p>We are pleased to invite you to submit your original contributions to the 23rd Annual UK
+                            Workshop on
+                            Computational Intelligence, UKCI 2024, which will take place at Belfast, Ulster University,
+                            UK, on
+                            4th - 6th September 2024.</p>
+                        <p>UKCI is the premier UK event for presenting leading research on all aspects of Computational
+                            Intelligence. The aim of this event is to provide a forum for the academic community and
+                            industry to
+                            share ideas about developing and using Computational Intelligence (CI) techniques, and
+                            methods, as
+                            well as exchanging views and new ideas.</p>
+                            <br>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-12 col-lg-6">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis consequuntur possimus fuga doloremque.</p>
+                <div class="card">
+                    <div class="card-body">
+                        <p> As a research field, CI attracts a large number of scientists, engineers and practitioners
+                            working
+                            primarily in the areas of Neural Networks, Fuzzy Systems and Evolutionary Computation. UKCI
+                            2024
+                            will take place at Belfast, Ulster University. </p>
+                        <p>All submissions will be peer-reviewed. In earlier iterations of UKCI, accepted papers have
+                            been
+                            included in post-conference volumes, such as in the Springer book series Advances in
+                            Intelligent
+                            Systems and Computing, and Expert Systems (John Wiley publishers).
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <h2 id="topicsofinteresttitle">Topics of Interest</h2>
+        <hr>
+        <br>
+        <div class="row">
+            <div class="col-sm-12">
+                        <ul class="list-group list-group-horizontal list-group-flush">
+                            <li class="list-group-item topicofinterest">Topics of Interest include but are not limited to:</li>
+                          </ul>
+                        <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item topicofinterest">Machine Learning</li>
+                            <li class="list-group-item topicofinterest">Neural Networks</li>
+                            <li class="list-group-item topicofinterest">Evolutionary Computation</li>
+                          </ul>
+                          <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item topicofinterest">Fuzzy Systems</li>
+                            <li class="list-group-item topicofinterest">Data Mining</li>
+                            <li class="list-group-item topicofinterest">Evolving Systems</li>
+                          </ul>
+                          <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item topicofinterest">Hybrid Methods</li>
+                            <li class="list-group-item topicofinterest">Intelligent Robotics</li>
+                            <li class="list-group-item topicofinterest">Cognitive Computing</li>
+                          </ul>
+                          <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item topicofinterest">Deep Learning</li>
+                            <li class="list-group-item topicofinterest">Applications of Computational Intelligence</li>
+                            <li class="list-group-item topicofinterest">Artificial Intelligence</li>
+                          </ul>
+                          
             </div>
         </div>
     </div>
@@ -106,7 +208,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    
+
     <script src="./script.js"></script>
 </body>
 
