some tweaks to key information layout

--- a/index.html
+++ b/index.html
@@ -64,32 +64,25 @@
         <hr>
         <br>
         <div class="row keyinfobody">
-            <div class="col-sm-12 col-lg-12">
+            <div class="col-sm-12 col-lg-6">
                 <div class="card">
                     <div class="card-body">
-                        <h6 class="keydate"><strong>UKCI:</strong> 4th - 6th September 2024</h6>
+                        <h6 class="keydate"><strong>UKCI:</strong> Belfast, Northern Ireland, 4th - 6th September 2024</h6>
                         <h6 class="keydate"><strong>Registration Opens:</strong> 20th May 2024</h6>
-                        <h6 class="keydate"><strong>Early Bird Registration Open Until:</strong> 22nd July 2024</h6>
-                        <!-- <h6 class="keydate"><strong>Regular Registration: </strong>£375 | <strong>Early Bird Registration: </strong>£325</h6>
-                        <h6 class="keydate"><strong>Student Registration: </strong>£275 | <strong>Early Bird Student Registration: </strong>£225</h6> -->
                         <h6 class="keydate"><strong>Paper Submission Deadline:</strong> 9th June 2024</h6>
                         <h6 class="keydate"><strong>Acceptance Notification:</strong> 14th July 2024</h6>
                         <h6 class="keydate"><strong>Camera Ready Submission Deadline:</strong> 4th August 2024</h6>
                     </div>
                 </div>
             </div>
-        </div>
-        <br>
-        <br>
-        <h2 id="keyinfotitle">Registration Fees</h2>
-        <hr>
-        <br>
-        <div class="row keyinfobody">
-            <div class="col-sm-12 col-lg-12">
+            <div class="col-sm-12 col-lg-6">
                 <div class="card">
                     <div class="card-body">
-                        <h6 class="keydate"><strong>Regular Registration: </strong>£375 | <strong>Early Bird Registration: </strong>£325</h6>
-                        <h6 class="keydate"><strong>Student Registration: </strong>£275 | <strong>Early Bird Student Registration: </strong>£225</h6>
+                        <h6 class="keydate"><strong>Early Bird Registration Open Until:</strong> 22nd July 2024</h6>
+                        <h6 class="keydate"><strong>Early Bird Registration: </strong>£325</h6>
+                        <h6 class="keydate"><strong>Regular Registration: </strong>£375</h6>
+                        <h6 class="keydate"><strong>Early Bird Student Registration: </strong>£225</h6>
+                        <h6 class="keydate"><strong>Student Registration: </strong>£275 </h6>
                     </div>
                 </div>
             </div>
@@ -114,7 +107,7 @@
                             share ideas about developing and using Computational Intelligence (CI) techniques, and
                             methods, as
                             well as exchanging views and new ideas.</p>
-                            <br>
+                        <br>
                     </div>
                 </div>
             </div>
@@ -143,30 +136,30 @@
         <br>
         <div class="row">
             <div class="col-sm-12">
-                        <ul class="list-group list-group-horizontal list-group-flush">
-                            <li class="list-group-item topicofinterest">Topics of Interest include but are not limited to:</li>
-                          </ul>
-                        <ul class="list-group list-group-horizontal">
-                            <li class="list-group-item topicofinterest">Machine Learning</li>
-                            <li class="list-group-item topicofinterest">Neural Networks</li>
-                            <li class="list-group-item topicofinterest">Evolutionary Computation</li>
-                          </ul>
-                          <ul class="list-group list-group-horizontal">
-                            <li class="list-group-item topicofinterest">Fuzzy Systems</li>
-                            <li class="list-group-item topicofinterest">Data Mining</li>
-                            <li class="list-group-item topicofinterest">Evolving Systems</li>
-                          </ul>
-                          <ul class="list-group list-group-horizontal">
-                            <li class="list-group-item topicofinterest">Hybrid Methods</li>
-                            <li class="list-group-item topicofinterest">Intelligent Robotics</li>
-                            <li class="list-group-item topicofinterest">Cognitive Computing</li>
-                          </ul>
-                          <ul class="list-group list-group-horizontal">
-                            <li class="list-group-item topicofinterest">Deep Learning</li>
-                            <li class="list-group-item topicofinterest">Applications of Computational Intelligence</li>
-                            <li class="list-group-item topicofinterest">Artificial Intelligence</li>
-                          </ul>
-                          
+                <ul class="list-group list-group-horizontal list-group-flush">
+                    <li class="list-group-item topicofinterest">Topics of Interest include but are not limited to:</li>
+                </ul>
+                <ul class="list-group list-group-horizontal">
+                    <li class="list-group-item topicofinterest">Machine Learning</li>
+                    <li class="list-group-item topicofinterest">Neural Networks</li>
+                    <li class="list-group-item topicofinterest">Evolutionary Computation</li>
+                </ul>
+                <ul class="list-group list-group-horizontal">
+                    <li class="list-group-item topicofinterest">Fuzzy Systems</li>
+                    <li class="list-group-item topicofinterest">Data Mining</li>
+                    <li class="list-group-item topicofinterest">Evolving Systems</li>
+                </ul>
+                <ul class="list-group list-group-horizontal">
+                    <li class="list-group-item topicofinterest">Hybrid Methods</li>
+                    <li class="list-group-item topicofinterest">Intelligent Robotics</li>
+                    <li class="list-group-item topicofinterest">Cognitive Computing</li>
+                </ul>
+                <ul class="list-group list-group-horizontal">
+                    <li class="list-group-item topicofinterest">Deep Learning</li>
+                    <li class="list-group-item topicofinterest">Applications of Computational Intelligence</li>
+                    <li class="list-group-item topicofinterest">Artificial Intelligence</li>
+                </ul>
+
             </div>
         </div>
     </div>
