some responsiveness styling updates - HOME PAGE DRAFT V1 - ADDED ALL CONTENT UP TO REGISTRATION

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         <h2 id="keyinfotitle">Key Information</h2>
         <hr>
         <br>
-        <div class="row keyinfobody">
+        <div class="row gy-3">
             <div class="col-sm-12 col-lg-6">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body keyinfobody">
                         <h6 class="keydate"><strong>UKCI:</strong> Belfast, Northern Ireland, 4th - 6th September 2024</h6>
                         <h6 class="keydate"><strong>Registration Opens:</strong> 20th May 2024</h6>
                         <h6 class="keydate"><strong>Paper Submission Deadline:</strong> 9th June 2024</h6>
@@ -77,7 +77,7 @@
             </div>
             <div class="col-sm-12 col-lg-6">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body keyinfobody">
                         <h6 class="keydate"><strong>Early Bird Registration Open Until:</strong> 22nd July 2024</h6>
                         <h6 class="keydate"><strong>Early Bird Registration: </strong>£325</h6>
                         <h6 class="keydate"><strong>Regular Registration: </strong>£375</h6>
@@ -92,10 +92,10 @@
         <h2 id="callforpapertitle">Call for Papers</h2>
         <hr>
         <br>
-        <div class="row">
+        <div class="row gy-3">
             <div class="col-sm-12 col-lg-6">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body callforpaperbody">
                         <p>We are pleased to invite you to submit your original contributions to the 23rd Annual UK
                             Workshop on
                             Computational Intelligence, UKCI 2024, which will take place at Belfast, Ulster University,
@@ -113,7 +113,7 @@
             </div>
             <div class="col-sm-12 col-lg-6">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body callforpaperbody">
                         <p> As a research field, CI attracts a large number of scientists, engineers and practitioners
                             working
                             primarily in the areas of Neural Networks, Fuzzy Systems and Evolutionary Computation. UKCI
@@ -134,11 +134,12 @@
         <h2 id="topicsofinteresttitle">Topics of Interest</h2>
         <hr>
         <br>
-        <div class="row">
+        <div class="row ">
             <div class="col-sm-12">
                 <ul class="list-group list-group-horizontal list-group-flush">
                     <li class="list-group-item topicofinterest">Topics of Interest include but are not limited to:</li>
                 </ul>
+                <br>
                 <ul class="list-group list-group-horizontal">
                     <li class="list-group-item topicofinterest">Machine Learning</li>
                     <li class="list-group-item topicofinterest">Neural Networks</li>
@@ -172,7 +173,7 @@
                 </a>
                 <br>
                 <a class="navbar-brand" href="./index.html">
-                    <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University">
+                    <img id="uulogof" src="./images/UUWhite.png" alt="Ulster University">
                 </a>
             </div>
             <div class="col-sm-12 col-lg-6">
