added in Janes content including the registration, venue, accomodation, and travel information from the word doc and powerpoint provided - only have the committee page left to do, then merge to main and deploy to github pages. Notify Jane after deployment and then incorproate feed back.

--- a/index.html
+++ b/index.html
@@ -32,16 +32,28 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./about.html">About</a>
+                                    <a class="nav-link" href="./registration.html">Registration</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./submissions.html">Submissions</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./programme.html">Programme</a>
+                                    <a class="nav-link" href="./committee.html">Committee</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./venue.html">Venue</a>
+                                    <a class="nav-link" href="./programme.html">Programme</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="./venue.html" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Logistics
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
+                                        <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                                        <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
+                                        <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
+                                    </ul>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./contact.html">Contact</a>
@@ -67,7 +79,8 @@
             <div class="col-sm-12 col-lg-6">
                 <div class="card">
                     <div class="card-body keyinfobody">
-                        <h6 class="keydate"><strong>UKCI:</strong> Belfast, Northern Ireland, 4th - 6th September 2024</h6>
+                        <h6 class="keydate"><strong>UKCI:</strong> Belfast, Northern Ireland, 4th - 6th September 2024
+                        </h6>
                         <h6 class="keydate"><strong>Registration Opens:</strong> 20th May 2024</h6>
                         <h6 class="keydate"><strong>Paper Submission Deadline:</strong> 9th June 2024</h6>
                         <h6 class="keydate"><strong>Acceptance Notification:</strong> 14th July 2024</h6>
@@ -128,13 +141,13 @@
                     </div>
                 </div>
             </div>
+
         </div>
         <br>
         <br>
         <h2 id="topicsofinteresttitle">Topics of Interest</h2>
         <hr>
         <br>
-        <div class="row ">
             <div class="col-sm-12">
                 <ul class="list-group list-group-horizontal list-group-flush">
                     <li class="list-group-item topicofinterest">Topics of Interest include but are not limited to:</li>
@@ -160,7 +173,7 @@
                     <li class="list-group-item topicofinterest">Applications of Computational Intelligence</li>
                     <li class="list-group-item topicofinterest">Artificial Intelligence</li>
                 </ul>
-
+    
             </div>
         </div>
     </div>
