--- a/submissions.html
+++ b/submissions.html
@@ -30,16 +30,28 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./about.html">About</a>
+                                    <a class="nav-link" href="./registration.html">Registration</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./submissions.html">Submissions</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./programme.html">Programme</a>
+                                    <a class="nav-link" href="./committee.html">Committee</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./venue.html">Venue</a>
+                                    <a class="nav-link" href="./programme.html">Programme</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="./venue.html" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Logistics
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
+                                        <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                                        <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
+                                        <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
+                                    </ul>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./contact.html">Contact</a>
@@ -57,28 +69,26 @@
                             6th - 8th September
                         </div>
                         <div class="subnavlink col-lg-4 col-sm-12">
-                            @Ulster University, Belfast
+                            Ulster University, Belfast, Northern Ireland
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    </div>
 
     <div id="bodyContent" class="container-fluid">
-        <h2>Submissions</h2>
-        <br>
-        <div class="row">
-            <div class="col">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla
-                    officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis
-                    consequuntur possimus fuga doloremque.</p>
-            </div>
-            <div class="col">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla
-                    officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis
-                    consequuntur possimus fuga doloremque.</p>
+        <div class="row gy-3">
+            <h2>Submissions (TBC)</h2>
+            <hr>
+            <br>
+            <div class="col-sm-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body registrationbody">
+                        <p>The UKCI Conference 2024 Submission Portal will be available once registration opens on
+                            <strong>20th May 2024</strong></p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
