--- a/programme.html
+++ b/programme.html
@@ -15,37 +15,52 @@
     <div id="bodyBanner" class="container-fluid">
         <div class="row">
             <div class="col">
-                  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
+                <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="./index.html">
-                            <p id="ukcilogo">UKCI / 
-                            <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University"> </p>
+                            <p id="ukcilogo">UKCI /
+                                <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University">
+                            </p>
                         </a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="navbar-toggler-icon"></i>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="./about.html">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./submissions.html">Submissions</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./programme.html">Programme</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./venue.html">Venue</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./contact.html">Contact</a>
-                            </li>
-                        </ul>
-                      </div>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <i class="navbar-toggler-icon"></i>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ms-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./registration.html">Registration</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./submissions.html">Submissions</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./committee.html">Committee</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./programme.html">Programme</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="./venue.html" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Logistics
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
+                                        <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                                        <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
+                                        <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./contact.html">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                  </nav>
-                  <div id="subnavbar" class="container-fluid text-center">
+                </nav>
+                <div id="subnavbar" class="container-fluid text-center">
                     <div class="row align-items-start justify-content-center">
                         <div class="subnavlink col-lg-4 col-sm-12">
                             UKCI Conference 2024
@@ -54,7 +69,7 @@
                             6th - 8th September
                         </div>
                         <div class="subnavlink col-lg-4 col-sm-12">
-                            @Ulster University, Belfast
+                            Ulster University, Belfast, Northern Ireland
                         </div>
                     </div>
                 </div>
@@ -63,14 +78,17 @@
     </div>
 
     <div id="bodyContent" class="container-fluid">
-        <h2>Programme</h2>
-        <br>
-        <div class="row">
-            <div class="col">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis consequuntur possimus fuga doloremque.</p>
-            </div>
-            <div class="col">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis consequuntur possimus fuga doloremque.</p>
+        <div class="row gy-3">
+            <h2>Programme (TBC)</h2>
+            <hr>
+            <br>
+            <div class="col-sm-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body registrationbody">
+                        <p>The UKCI Conference 2024 Programme will be annonunced after the Camera Ready Submission
+                            Deadline on <strong> 4th August 2024 </strong></p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -111,7 +129,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    
+
     <script src="./script.js"></script>
 </body>
 
