committee page and list added with a small easter egg for izzy. All content provided by Jane has now been incorporated and site at good foundation for next year. Merge to main, deploy to pages, notify Jane and then incorporate feedback

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
     <!-- Additional JQuery If required -->
-    <!-- <script src="https://code.jquery.com/jquery-3.7.0.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
                                     <a class="nav-link" href="./submissions.html">Submissions</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./committee.html">Committee</a>
+                                    <a class="nav-link" href="./about.html">Committee</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./programme.html">Programme</a>
@@ -148,34 +148,114 @@
         <h2 id="topicsofinteresttitle">Topics of Interest</h2>
         <hr>
         <br>
-            <div class="col-sm-12">
-                <ul class="list-group list-group-horizontal list-group-flush">
-                    <li class="list-group-item topicofinterest">Topics of Interest include but are not limited to:</li>
-                </ul>
-                <br>
-                <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item topicofinterest">Machine Learning</li>
-                    <li class="list-group-item topicofinterest">Neural Networks</li>
-                    <li class="list-group-item topicofinterest">Evolutionary Computation</li>
-                </ul>
-                <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item topicofinterest">Fuzzy Systems</li>
-                    <li class="list-group-item topicofinterest">Data Mining</li>
-                    <li class="list-group-item topicofinterest">Evolving Systems</li>
-                </ul>
-                <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item topicofinterest">Hybrid Methods</li>
-                    <li class="list-group-item topicofinterest">Intelligent Robotics</li>
-                    <li class="list-group-item topicofinterest">Cognitive Computing</li>
-                </ul>
-                <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item topicofinterest">Deep Learning</li>
-                    <li class="list-group-item topicofinterest">Applications of Computational Intelligence</li>
-                    <li class="list-group-item topicofinterest">Artificial Intelligence</li>
-                </ul>
-    
+        <div class="col-sm-12">
+            <ul class="list-group list-group-horizontal list-group-flush">
+                <li class="list-group-item topicofinterest">Topics of Interest include but are not limited to:</li>
+            </ul>
+            <br>
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item topicofinterest">Machine Learning</li>
+                <li class="list-group-item topicofinterest">Neural Networks</li>
+                <li class="list-group-item topicofinterest">Evolutionary Computation</li>
+            </ul>
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item topicofinterest">Fuzzy Systems</li>
+                <li class="list-group-item topicofinterest">Data Mining</li>
+                <li class="list-group-item topicofinterest">Evolving Systems</li>
+            </ul>
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item topicofinterest">Hybrid Methods</li>
+                <li class="list-group-item topicofinterest">Intelligent Robotics</li>
+                <li class="list-group-item topicofinterest">Cognitive Computing</li>
+            </ul>
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item topicofinterest">Deep Learning</li>
+                <li class="list-group-item topicofinterest">Applications of Computational Intelligence</li>
+                <li class="list-group-item topicofinterest">Artificial Intelligence</li>
+            </ul>
+
+        </div>
+    </div>
+    <br>
+    <br>
+    <h2 id="topicsofinteresttitle">Topics of Interest</h2>
+    <hr>
+    <br>
+    <div class="col-sm-12">
+        <ul class="list-group list-group-horizontal list-group-flush">
+            <li class="list-group-item topicofinterest">Topics of Interest include but are not limited to:</li>
+        </ul>
+        <br>
+        <ul class="list-group list-group-horizontal">
+            <li class="list-group-item topicofinterest">Machine Learning</li>
+            <li class="list-group-item topicofinterest">Neural Networks</li>
+            <li class="list-group-item topicofinterest">Evolutionary Computation</li>
+        </ul>
+        <ul class="list-group list-group-horizontal">
+            <li class="list-group-item topicofinterest">Fuzzy Systems</li>
+            <li class="list-group-item topicofinterest">Data Mining</li>
+            <li class="list-group-item topicofinterest">Evolving Systems</li>
+        </ul>
+        <ul class="list-group list-group-horizontal">
+            <li class="list-group-item topicofinterest">Hybrid Methods</li>
+            <li class="list-group-item topicofinterest">Intelligent Robotics</li>
+            <li class="list-group-item topicofinterest">Cognitive Computing</li>
+        </ul>
+        <ul class="list-group list-group-horizontal">
+            <li class="list-group-item topicofinterest">Deep Learning</li>
+            <li class="list-group-item topicofinterest">Applications of Computational Intelligence</li>
+            <li class="list-group-item topicofinterest">Artificial Intelligence</li>
+        </ul>
+    </div>
+    <br>
+    <hr>
+    <br>
+    <div class="col-sm-12 col-lg-12">
+        <div class="card">
+            <div class="card-body registrationbody">
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed d-block text-center" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                aria-controls="flush-collapseOne">
+                                <strong>Previous UKCI Host Cities</strong>
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                <span class="custom-bullet"></span> UKCI 2023 - Birmingham <br>
+                                <span class="custom-bullet"></span> UKCI 2022 - Sheffield <br>
+                                <span class="custom-bullet"></span> UKCI 2021 - Aberystwyth <br>
+                                <span class="custom-bullet"></span> UKCI 2019 - Portsmouth <br>
+                                <span class="custom-bullet"></span> UKCI 2018 - Nottingham <br>
+                                <span class="custom-bullet"></span> UKCI2017 - Cardiff <br>
+                                <span class="custom-bullet"></span> UKCI2016 - Lancaster <br>
+                                <span class="custom-bullet"></span> UKCI 2015 - Exeter <br>
+                                <span class="custom-bullet"></span> UKCI 2014 - Bradford <br>
+                                <span class="custom-bullet"></span> UKCI 2013 - Surrey <br>
+                                <span class="custom-bullet"></span> UKCI 2012 - Edinburgh <br>
+                                <span class="custom-bullet"></span> UKCI 2011 - Manchester <br>
+                                <span class="custom-bullet"></span> UKCI 2010 - Essex <br>
+                                <span class="custom-bullet"></span> UKCI 2009 - Nottingham <br>
+                                <span class="custom-bullet"></span> UKCI 2008 - Leicester <br>
+                                <span class="custom-bullet"></span> UKCI 2007 - Aberdeen <br>
+                                <span class="custom-bullet"></span> UKCI 2006 - Leeds <br>
+                                <span class="custom-bullet"></span> UKCI 2005 - London <br>
+                                <span class="custom-bullet"></span> UKCI 2004 - Loughborough <br>
+                                <span class="custom-bullet"></span> UKCI 2003 - Bristol <br>
+                                <span class="custom-bullet"></span> UKCI 2002 - Birmingham <br>
+                                <span class="custom-bullet"></span> UKCI 2001 - Edinburgh <br>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
+    </div>
     </div>
 
     <div id="footer" class="container-fluid">
@@ -190,18 +270,30 @@
                 </a>
             </div>
             <div class="col-sm-12 col-lg-6">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="./about.html">About</a>
+                        <a class="nav-link" href="./registration.html">Registration</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./submissions.html">Submissions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./programme.html">Programme</a>
+                        <a class="nav-link" href="./about.html">Committee</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./venue.html">Venue</a>
+                        <a class="nav-link" href="./programme.html">Programme</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="./venue.html" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Logistics
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
+                            <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                            <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
+                            <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
