--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                                     <a class="nav-link" href="./submissions.html">Submissions</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./committee.html">Committee</a>
+                                    <a class="nav-link" href="./about.html">Committee</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./programme.html">Programme</a>
@@ -85,8 +85,10 @@
             <div class="col-sm-12 col-lg-12">
                 <div class="card">
                     <div class="card-body registrationbody">
-                        <p>If you have any inquires at all about the UKCI Conference 2024, please do not hesitate to email
-                            <strong> ross-s24@ulster.ac.uk. </strong> We will do our best to respond in a timely manner.</p>
+                        <p>If you have any inquires at all about the UKCI Conference 2024, please do not hesitate to
+                            email
+                            <strong> ross-s24@ulster.ac.uk. </strong> We will do our best to respond in a timely manner.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -104,18 +106,30 @@
                 </a>
             </div>
             <div class="col-sm-12 col-lg-6">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="./about.html">About</a>
+                        <a class="nav-link" href="./registration.html">Registration</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./submissions.html">Submissions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./programme.html">Programme</a>
+                        <a class="nav-link" href="./about.html">Committee</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./venue.html">Venue</a>
+                        <a class="nav-link" href="./programme.html">Programme</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="./venue.html" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Logistics
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
+                            <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                            <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
+                            <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
