--- a/venue.html
+++ b/venue.html
@@ -36,7 +36,7 @@
                                     <a class="nav-link" href="./submissions.html">Submissions</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./committee.html">Committee</a>
+                                    <a class="nav-link" href="./about.html">Committee</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./programme.html">Programme</a>
@@ -222,18 +222,30 @@
                 </a>
             </div>
             <div class="col-sm-12 col-lg-6">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="./about.html">About</a>
+                        <a class="nav-link" href="./registration.html">Registration</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./submissions.html">Submissions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./programme.html">Programme</a>
+                        <a class="nav-link" href="./about.html">Committee</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./venue.html">Venue</a>
+                        <a class="nav-link" href="./programme.html">Programme</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="./venue.html" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Logistics
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
+                            <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                            <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
+                            <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
