updated css link to not contain root but just the initial slash of the same directory as index, this it is due to the github pages structure - should hopefully be working now

--- a/venue.html
+++ b/venue.html
@@ -8,7 +8,7 @@
     <title>UKCI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="./styles.css" rel="stylesheet">
+    <link href="/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -190,20 +190,20 @@
                 </ul>
                 <br>
                 <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item topicofinterest">LHR London</li>
-                    <li class="list-group-item topicofinterest">LGW London</li>
+                    <li class="list-group-item topicofinterest"> <strong>LHR:</strong> London</li>
+                    <li class="list-group-item topicofinterest"> <strong>LGW:</strong> London</li>
                 </ul>
                 <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item topicofinterest">EDI Edinburgh</li>
-                    <li class="list-group-item topicofinterest">MAN Manchester</li>
+                    <li class="list-group-item topicofinterest"><strong>EDI:</strong> Edinburgh</li>
+                    <li class="list-group-item topicofinterest"><strong>MAN:</strong> Manchester</li>
                 </ul>
                 <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item topicofinterest">CDG Paris</li>
-                    <li class="list-group-item topicofinterest">AMS Amsterdam</li>
+                    <li class="list-group-item topicofinterest"><strong>CDG:</strong> Paris</li>
+                    <li class="list-group-item topicofinterest"><strong>AMS:</strong> AMS Amsterdam</li>
                 </ul>
                 <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item topicofinterest">FRA Frankfurt</li>
-                    <li class="list-group-item topicofinterest">RKV Reykjavik</li>
+                    <li class="list-group-item topicofinterest"><strong>FRA:</strong> Frankfurt</li>
+                    <li class="list-group-item topicofinterest"><strong>RKV:</strong> Reykjavik</li>
                 </ul>
             </div>
         </div>
