added Janes updates - price list to registration page and haiying and yaxin to committee TPC list

--- a/about.html
+++ b/about.html
@@ -140,6 +140,10 @@
                                 <div id="flush-collapseThree" class="accordion-collapse collapse"
                                     data-bs-parent="#accordionFlushExample">
                                     <div class="accordion-body">
+                                        <span class="custom-bullet"></span> Dr Haiying Wang, University of
+                                        Ulster<br>
+                                        <span class="custom-bullet"></span> Dr Yaxin Bi, University of
+                                        Ulster<br>
                                         <span class="custom-bullet"></span> Dr Sean Anderson, University of
                                         Sheffield<br>
                                         <span class="custom-bullet"></span> Prof. Nidhal Bouaynaya, Rowan University<br>
