--- a/registration.html
+++ b/registration.html
@@ -79,6 +79,22 @@
 
     <div id="bodyContent" class="container-fluid">
         <div class="row gy-3">
+            <h2 id="callforpapertitle">Fees</h2>
+            <hr>
+            <br>
+            <div class="col-sm-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body keyinfobody">
+                        <h6 class="keydate"><strong>Early Bird Registration Open Until:</strong> 22nd July 2024</h6>
+                        <h6 class="keydate"><strong>Early Bird Registration: </strong>£325</h6>
+                        <h6 class="keydate"><strong>Regular Registration: </strong>£375</h6>
+                        <h6 class="keydate"><strong>Early Bird Student Registration: </strong>£225</h6>
+                        <h6 class="keydate"><strong>Student Registration: </strong>£275 </h6>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <br>
             <h2 id="callforpapertitle">Registration</h2>
             <hr>
             <br>
